# Insurance-Model

./: .gitignore  CMakeLists.txt  CustomersManager.h  Insurance.cpp  Insurance.h  Insurance.sln  Insurance.vcxproj  Insurance.vcxproj.filters  company.cpp  company.h  httplib.h  main.cpp  mainwindow.cpp  mainwindow.h  policy.cpp  policy.h  server.cpp
www/: index.html  script.js  styles.css
